--- a/theme.toml
+++ b/theme.toml
@@ -1,4 +1,4 @@
-name = "Blackbox"
+name = "BlackBox"
 license = "MIT"
 licenselink = "https://github.com/karlnaumann/blackbox/blob/main/LICENSE"
 description = "A modern, minimalist Hugo theme designed for personal websites, portfolios, and blogs. Features a clean, dark design with excellent typography and responsive layout."
